test/classes/delete-free/owned/errors/transferInBegin.future
error message: ownership transfer points to wrong line

This test should generate an error similar to the one it is, but
the ownership transfer here is pointing to the wrong line; its
declaration rather than where the ownership transfer actually
occurs (in a task intent).